<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:context=".List">


            <ImageView
                android:id="@+id/homeLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/logo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/bars_restaurants"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeLogo" />

            <Button
                android:id="@+id/Carrolls"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/carrolls"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/black"
                android:background="@drawable/custom_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Restaurants" />

            <Button
                android:id="@+id/DevittsPub"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/devitts_pub"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                android:background="@drawable/custom_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Carrolls" />

            <Button
                android:id="@+id/Diceys"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:background="@drawable/custom_button"
                android:text="@string/diceys"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DevittsPub" />

            <Button
                android:id="@+id/Dunnes"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/dunness_bar"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                android:background="@drawable/custom_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Diceys" />

            <Button
                android:id="@+id/TheTempleBar"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/the_temple_bar"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                android:background="@drawable/custom_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Dunnes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout = "@layout/footer"/>

</RelativeLayout>