<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:context=".List">

            <ImageView
                android:id="@+id/homeLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/logo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/bars_restaurants"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeLogo" />

            <Button
                android:id="@+id/menu"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:text="@string/menu"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Restaurants" />

            <Button
                android:id="@+id/availabilities"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button"
                android:text="@string/availabilities"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu" />

            <Button
                android:id="@+id/reservation"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/reservation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availabilities" />

            <Button
                android:id="@+id/service_now"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/service_now"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reservation" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/footer" />

</RelativeLayout>