<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SummaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/homeLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="175dp"
            android:clickable="true"
            android:contentDescription="@string/logo"
            android:focusable="true"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/order_summary"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/homeLogo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="340dp"
            android:layout_height="400dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="#D9FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderSummary">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tableNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/table_number"
                    android:inputType="number"
                    android:ems="7"
                    android:imeOptions="actionDone"
                    android:maxLength="2"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_above="@+id/payment"
                    android:layout_below="@+id/tableNumber"
                    android:layout_alignParentStart="true"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/tableNumber" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/payment"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="230dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/check"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableNumber" />

                <Button
                    android:id="@+id/payment"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_button"
                    android:enabled="false"
                    android:text="@string/payment"
                    android:textColor="#007B35"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/clear_cart"
                    android:textColor="#007B35"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout = "@layout/footer"/>

</androidx.constraintlayout.widget.ConstraintLayout>