<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/homeLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contentDescription="@string/logo"
                android:focusable="true"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeLogo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="360dp"
                android:layout_height="280dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#D9FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.stripe.android.view.CardInputWidget
                    android:id="@+id/cardInputWidget"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:imeOptions="actionDone"
                    app:layout_constraintTop_toTopOf="parent">

                </com.stripe.android.view.CardInputWidget>

                <EditText
                    android:id="@+id/cardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/cardholder_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="25"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardInputWidget" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardName" />

                <Button
                    android:id="@+id/payButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:layout_marginTop="20dp"
                    android:text="@string/pay"
                    android:textColor="#007B35"
                    app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"
                    app:layout_constraintStart_toStartOf="@+id/cardInputWidget"
                    app:layout_constraintTop_toBottomOf="@+id/email" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout = "@layout/footer"/>
</androidx.constraintlayout.widget.ConstraintLayout>